# neggia

./: CMakeLists.txt
src/dectris/neggia/plugin/: CMakeLists.txt
src/dectris/neggia/user/: CMakeLists.txt  Dataset.cpp  Dataset.h  H5File.cpp  H5File.h  Synchronization.cpp  Synchronization.h  neggia_sync_test.cpp  neggia_sync_util.cpp
